[package]
name = "tokio-retry"
version = "0.3.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Extensible, asynchronous retry behaviours for futures/tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/srijs/rust-tokio-retry"
documentation = "https://docs.rs/tokio-retry"
keywords = ["futures", "tokio", "retry", "exponential", "backoff"]
edition = "2024"

[dependencies]
rand = "0.9"
tokio = { version = "1", features = ["time"] }
pin-project = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
